# sic_interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  demo  docker-compose.yml  setup.sh  src_test.sh
src/: base_array.hpp  chunk.hpp  common.hpp  compiler.hpp  debug.hpp  exception.hpp  main.cpp  memory.hpp  object.hpp  object_map.hpp  scanner.hpp  value.hpp  vm.hpp
src/data_structures/: array.hpp  vector.hpp  vector_mut.hpp
src/math/: common.cpp  common.hpp
tests/: main.cpp
tests/math/: common.cpp
